--- a/readme
+++ b/readme
@@ -1,28 +1,1 @@
-Name: Hailemichael Molla Gashaw
-Student Number: 20190771
-Assignment Number: 3
-
-This assignment was quite a practice about struct data types and
-hash table. It took me a total of about 30 hours to complete it.
-I find the assignment problems well fitted to practice to what we 
-have covered in class. In my assignment, I have implemented hash
-table expansion in the Registercustomer function of 
-customer_management2.c file. While working in this assignment, I
-have received much help from Professors, TAs, fellow classmates 
-and my friend Amanuel Assefa who helped me debug my code when I 
-run into segmenation faults. I am gratefull to all who helped me.
-
-The implemenations using the array and hash table have thier 
-own pros and cons.
-
-Implementation by arrays is probably easier to implement and is not
-that much error prone as compared to that of hash table. But, it is 
-not efficient and the performance rate is so low. It takes longer time
-to manipulate the user information and it's even worse when the number
-of users is too large.
-
-On the other hand, hash table is difficult to implement and it is more
-error prone than array implementation. However, it is very much more
-efficient than array expansion. User data manipulation can be done
-with in fraction of seconds using hash table while array implemetation 
-takes longer. 
+Customer management Database system
